[package]
name = "Geoffrey"
version = "0.1.0"
authors = ["Oswin Frans <oswfrans@gmail.com>"]

[dependencies]
uuid = { version = "0.4", features = ["v4"] }
semver = "0.6.0"
zip = "0.2"
serde = "0.9.11"
serde_json = "0.9.9"
base64 = "0.4.0"
libc = "0.2"
gotham = "0.3.0"


[lib]
crate-type = ["staticlib", "dylib"]

[profile.release]
debug = true

[profile.bench]
opt-level = 3
debug = true
